# jamdict

./: PEEWEE_MIGRATION.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
jamdict/: __init__.py  __version__.py  jamdict_peewee.py  jmdict.py  jmdict_peewee.py  jmdict_sqlite.py  jmnedict_peewee.py  kanjidic2_peewee.py  kanjidic2_sqlite.py  tools.py  util.py
jamdict/old/: __init__.py  jmdict_sqlite.py  jmnedict_sqlite.py  kanjidic2_sqlite.py  util_old.py
test/: test_jamdict.py  test_jmdict_peewee.py  test_jmdict_sqlite.py  test_jmnedict.py  test_kanjidic2_sqlite.py  test_peewee_phase5.py  test_phase6.py
